API_realisation without authorisation
